# SimCenterBootcamp2023

./: .gitignore  README.md
assignments/C-Day1/: CMakeLists.txt  pi.c  solveQuadratic.c
assignments/C-Day2/binaryFile/: file3.c
assignments/C-Day2/matMul/: CMakeLists.txt  (+2 more)
assignments/C-Day4/ex1/: CMakeLists.txt
assignments/C-Day4/ex2/: CMakeLists.txt  scatterArray.c
code/c/: memory3.c  memory5.c
docs/: .buildinfo  .special.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: .special.doctree  environment.pickle  index.doctree
docs/source/: .special.html  GUI.html  TACC.html  assignmentPreC.html  assignment_C1.html  assignment_C2.html  assignment_C2_solution.html  assignment_C3.html  assignment_C4.html  assignment_C4_solution.html  assignment_C5.html  assignment_day1.html  assignment_day2.html  assignment_day3.html  assignment_day4.html  assignment_day5.html  assignments.html  cmake.html  computer.html  emacs.html  git.html  help.html  index.html  install_issues.html  lecture_videos.html  lecture_videos_part0.html  lecture_videos_part1.html  lecture_videos_part1b.html  lecture_videos_part2.html  lecture_videos_part2_FINAL.html  lecture_videos_part3.html  mathematics.html  programming_challenge.html  resources.html  setupInstructions.html  syllabus.html  syllabus_by_day.html  syllabus_by_topic.html  tapis.html  tools.html
solutions/C-Day1/: pi.c  solveQuadratic.c  transformStress.c
solutions/C-Day2/matMul/: CMakeLists.txt  benchmark.cpp  blasDGEMM.c  matMul.c  myDGEMM.c  myDGEMM_Blocked.c  myDGEMM_OrderLoop.c  myDGEMM_Transpose.c
solutions/C-Day4/ex2/: CMakeLists.txt  normVector.c
sphynx/: conf.py  index.rst
sphynx/source/: assignment_C2.rst  assignment_C4.rst  assignment_C5.rst  assignments.rst  git.rst  setupInstructions.rst
(+74 files in other folders)
